# llm-router

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: basico.py
llm_router/: __init__.py  budget.py  providers.py  router.py  telemetry.py  types.py
tests/: test_router.py
