[project]
name = "llm-router"
version = "0.1.0"
description = "Roteador multi-modelo para LLMs: fallback em cascata, budget e telemetria. Zero dependências."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Moisés Costa" }]
keywords = ["llm", "router", "fallback", "openai", "anthropic", "rag", "agents", "ia", "fastapi"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Intended Audience :: Developers",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["llm_router"]
